--- a/importfile/templates/importPage.html
+++ b/importfile/templates/importPage.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>
 		<script src="/scripts/jquery.min.js"></script>
 		-->
+
 		<!-- Buttons 库的核心文件 -->
 		<link rel="stylesheet" type="text/css" href="../static/buttons.css">
 		<!-- 当需要使用带下拉菜单的按钮时才需要加载下面的 JavaScript 文件 -->
@@ -42,7 +43,7 @@
 
 		body{
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-			font-size: 10px;
+			font-size: 14px;
 			font-weight: bold;
 			line-height: 1.428571429;
 			color: #333333;
@@ -69,6 +70,8 @@
 		}
 		.center{ text-align: center; }
 		.toright{ vertical-align: }
+
+
 		</style>
 
 
@@ -103,28 +106,11 @@
 							<li><a href="#">导出为其他格式</a></li>
 						</ul>
 					</li>
-					<!--跳转到导入页面-->
-					<li><a href="../import/"><abbr title="从Excel文件导入到系统">导入</abbr></a></li>
+					<li><a href="/import/"><abbr title="从Excel文件导入到系统">导入</abbr></a></li>
 				</ul>
 			</div>
 		</nav>
-
-		<div class="container">
-			<span class="button-dropdoen button-dropdown-plain" data-buttons="dropdown">
-			<button class="button button-caution button-pill">导出<i class="fa fa-caret-down"></i>
-			</button>
-
-			<ul class="button-dropdown-list is-below">
-				<li><a href="http://www.baidu.com/">导出成exl</a></li>
-				<li class="button-dropdown-divider">
-					<a href="http://www.baidu.com/">导出成xml</a>
-				</li>
-				<li>
-					<a href="http://www.baidu.com/">跳转到百度</a>
-				</li>
-			</ul>
-			</span>
-			<ul class="nav nav-pills">
+		<ul class="nav nav-pills">
  			<li role="presentation" class="dropdown">
     			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       				Dropdown <span class="caret"></span>
@@ -132,8 +118,8 @@
    				<ul class="dropdown-menu">
     			</ul>
   			</li>
-			</ul>
-			<div class="container">
+		</ul>
+		<div class="container">
 			<div class="btn-group">
 				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> 
 					导出 
@@ -141,67 +127,19 @@
 				</button>
 				<ul class="dropdown-menu" role="menu">
 					<li><a href="#">导出成exl</a></li>
-				<li><a href="#">导出成xml</a></li>
+					<li><a href="#">导出成xml</a></li>
 					<li><a href="#">others</a></li>
 					<li class="divider"></li>
 					<li><a href="#">自定义导出</a></li>
 					
 				</ul>
 			</div>
-		
-				<div class="panel-group" id="accordion">
-  				<div class="panel panel-default">
-   					<div class="panel-heading">
-     					<h4 class="panel-title">
-        					<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">点击我进行展开，再次点击我进行折叠。第 1 部分
-        					</a>
-      					</h4>
-    				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
-      					<div class="panel-body"> Nihil anim keffiyeh helvetica, 
-      					craft beer labore wes anderson
-      					cred nesciunt sapiente ea proident. 
-      					Ad vegan excepteur butcher vice lomo.
-      					</div>
-    				</div>
- 				</div>
-  				<div class="panel panel-default">
-   	 				<div class="panel-heading">
-      					<h4 class="panel-title">
-        					<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-          					点击我进行展开，再次点击我进行折叠。<br>第 2 部分
-          					</a>
-      					</h4>
-    				</div>
-    				<div id="collapseTwo" class="panel-collapse collapse">
-      					<div class="panel-body">
-        				Nihil anim keffiyeh helvetica, craft beer labore wes anderson<br>
-        				cred nesciunt sapiente ea proident. Ad vegan excepteur butcher<br>
-        				vice lomo.
-      					</div>
-    				</div>
-  				</div>
-  				<div class="panel panel-default">
-    				<div class="panel-heading">
-      					<h4 class="panel-title">
-        					<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-          					点击我进行展开，再次点击我进行折叠。第 3 部分
-          					</a>
-      					</h4>
-    				</div>
-    				<div id="collapseThree" class="panel-collapse collapse">
-      					<div class="panel-body">
-        				Nihil anim keffiyeh helvetica, craft beer labore wes anderson
-       		 			cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
-        				vice lomo.
-      					</div>
-    				</div>
-  				</div>
-				</div>
-			</div>
 		</div>
 		<div class="container">
-			<button></button>
+			<form role="form">
+				<div></div>
+			</form>
+			<button type="button" class="btn btn-default">导入</button>
 		</div>
 
 	</body>
