--- a/index/templates/bottom.html
+++ b/index/templates/bottom.html
@@ -69,12 +69,18 @@
 		}
 		.center{ text-align: center; }
 		.toright{ vertical-align: }
-		</style>
+		
+		.bottom{
+			margin-bottom: 10px;
+			bottom: 5px;
+			
+		}
 
+		</style>
 	</head>
 
 	<body>
-		<div>
+		<div class="bottom">
 			this is the bottom!
 		</div>
 	</body>
