--- a/index/templates/home.html
+++ b/index/templates/home.html
@@ -4,8 +4,96 @@
 {% extends 'base.html' %}
 
 <head>
+
+		<link rel="stylesheet" type="text/css" href="/static/boot.css">
+		<!--
+		<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
+		<script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>
+		<script src="/scripts/jquery.min.js"></script>
+		-->
+		<!-- Buttons 库的核心文件 -->
+		<link rel="stylesheet" type="text/css" href="../static/buttons.css">
+		<!-- 当需要使用带下拉菜单的按钮时才需要加载下面的 JavaScript 文件 -->
+ 	    <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+        <script type="text/javascript" src="js/buttons.js"></script>
+        <!-- 只有使用字体图标时才需要加载 Font-Awesome -->
+        <link href="http://cdn.bootcss.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+        <!-- 新 Bootstrap 核心 CSS 文件 -->
+		<link href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+ 
+		<!-- 可选的Bootstrap主题文件（一般不使用） -->
+		<script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap-theme.min.css"></script>
+ 
+		<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+		<script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
+ 
+		<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+		<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+		<link rel="stylesheet" type="text/css" href="/static/bootstrap-theme.min.css">
+
+		<!--百度静态资源库chart.js-->
+	 	<script type="text/javascript" src="http://apps.bdimg.com/libs/Chart.js/0.2.0/Chart.min.js"></script>
+
+		
+		<title> 上海市高中自主招生信息收集系统 </title>
+
+		<style type="text/css">
+
+			.img-responsive{
+				display: inline-block;
+				height: auto;
+				max-width: 100%;
+			}
+
+			body{
+				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				font-size: 10px;
+				font-weight: bold;
+				line-height: 1.428571429;
+				color: #333333;
+				background-color: #ffffff;
+				padding: 50px;
+				margin: 20px;
+			}
+
+			a:link{ font-size: 18px; color: #3d3b4f; }
+			a:visited{ color: #b35c44; }
+			a:hover{ color: #88ada6; }
+
+			.container{
+				padding-right: 15px;
+				padding-left: 15px;
+				margin-right: auto;
+				margin-left: auto;
+				width: 75%;
+			}
+			.container:before,
+			.container:after{
+				display: table;
+				content: " ";
+			}
+
+			.bigcontainer{
+				padding-right: 5px;
+				padding-left: 5px;
+				margin-right: auto;
+				margin-left: auto;
+				width: 85%;
+			}
+			.bigcontainer:before,
+			.bigcontainer:after{
+				display: table;
+				content: " ";
+			}
+
+			.center{ text-align: center; }
+			.toright{ vertical-align: }
+		</style>
+
 	<title>
-		{% block title %}上海市高中自主招生信息收集系统{% endblock %} -- 李元祎
+		{% block title %}上海市高中自主招生信息收集系统-- 李元祎{% endblock %} 
 	</title>
 </head>
 
@@ -13,9 +101,107 @@
 
 	{% block content %}
 
-	<div>统计图</div>
+	<div class="bigcontainer">
 
-	<div>welcome to the homepage.</div>
+		<div>统计图</div>
+
+		<div>welcome to the homepage.</div>
+
+		<div class="container">
+			<span class="button-dropdoen button-dropdown-plain" data-buttons="dropdown">
+			<button class="button button-caution button-pill">导出<i class="fa fa-caret-down"></i>
+			</button>
+
+			<ul class="button-dropdown-list is-below">
+				<li><a href="http://www.baidu.com/">导出成exl</a></li>
+				<li class="button-dropdown-divider">
+					<a href="http://www.baidu.com/">导出成xml</a>
+				</li>
+				<li>
+					<a href="http://www.baidu.com/">跳转到百度</a>
+				</li>
+			</ul>
+			</span>
+			<ul class="nav nav-pills">
+ 			<li role="presentation" class="dropdown">
+    			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      				Dropdown <span class="caret"></span>
+    			</a>
+   				<ul class="dropdown-menu">
+    			</ul>
+  			</li>
+			</ul>
+			<div class="container">
+			<div class="btn-group">
+				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> 
+					导出 
+					<span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu">
+					<li><a href="#">导出成exl</a></li>
+				<li><a href="#">导出成xml</a></li>
+					<li><a href="#">others</a></li>
+					<li class="divider"></li>
+					<li><a href="#">自定义导出</a></li>
+					
+				</ul>
+			</div>
+		
+				<div class="panel-group" id="accordion">
+  				<div class="panel panel-default">
+   					<div class="panel-heading">
+     					<h4 class="panel-title">
+        					<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">点击我进行展开，再次点击我进行折叠。第 1 部分
+        					</a>
+      					</h4>
+    				</div>
+    				<div id="collapseOne" class="panel-collapse collapse in">
+      					<div class="panel-body"> Nihil anim keffiyeh helvetica, 
+      					craft beer labore wes anderson
+      					cred nesciunt sapiente ea proident. 
+      					Ad vegan excepteur butcher vice lomo.
+      					</div>
+    				</div>
+ 				</div>
+  				<div class="panel panel-default">
+   	 				<div class="panel-heading">
+      					<h4 class="panel-title">
+        					<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+          					点击我进行展开，再次点击我进行折叠。<br>第 2 部分
+          					</a>
+      					</h4>
+    				</div>
+    				<div id="collapseTwo" class="panel-collapse collapse">
+      					<div class="panel-body">
+        				Nihil anim keffiyeh helvetica, craft beer labore wes anderson<br>
+        				cred nesciunt sapiente ea proident. Ad vegan excepteur butcher<br>
+        				vice lomo.
+      					</div>
+    				</div>
+  				</div>
+  				<div class="panel panel-default">
+    				<div class="panel-heading">
+      					<h4 class="panel-title">
+        					<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+          					点击我进行展开，再次点击我进行折叠。第 3 部分
+          					</a>
+      					</h4>
+    				</div>
+    				<div id="collapseThree" class="panel-collapse collapse">
+      					<div class="panel-body">
+        				Nihil anim keffiyeh helvetica, craft beer labore wes anderson
+       		 			cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+        				vice lomo.
+      					</div>
+    				</div>
+  				</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<button></button>
+		</div>
+	</div>
 
 	{% endblock %}
 
