--- a/index/templates/nav.html
+++ b/index/templates/nav.html
@@ -5,12 +5,12 @@
 		<!--导航栏-->
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">自主招生信息收集系统</a>
+				<a class="navbar-brand" href="../home/">自主招生信息收集系统</a>
 			</div>
 			<div>
 				<ul class="nav navbar-nav">
 					<li class="active">
-						<a href="#">信息查询</a>
+						<a href="../datatable/">信息列表</a>
 					</li>
 					<li>
 						<a href="#">信息统计</a>
