--- a/datatable/templates/dataPage.html
+++ b/datatable/templates/dataPage.html
@@ -42,11 +42,11 @@
 		   <div class="panel-body">
 		      	<form class="form-inline" role="form">
 					<div class="form-group">
-					 	<label for="name">初中</label>
+					 	<label for="name">初中: </label>
 						<input type="text" class="form-control" id="name" placeholder="请输入初中校名">
 					</div>
 					<div class="form-group">
-					 	<label for="name">高中</label>
+					 	<label for="name">高中: </label>
 						<input type="text" class="form-control" id="name" placeholder="请输入高中校名">
 					</div>
 					<div class="form-group">
