--- a/importfile/templates/importPage.html
+++ b/importfile/templates/importPage.html
@@ -106,10 +106,11 @@
 		</div>
 		<!--垂直（基本）表单-->
 		<div class="container">
-			<form role="form">
+			<form role="form" method="POST">
+				{% csrf_token %}
 				<div class="form-group">
 					<label for="name">名称</label>
-					<input type="text" class="form-control" id="name" placeholder="请输入名称">
+					<input type="text" class="form-control" id="name" name="name" placeholder="请输入名称">
 				</div>
 				<div class="form-group">
 					<label for="inputfile">文件输入</label>
