--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html><!--0421-->
 <html>
 
@@ -25,18 +26,21 @@
     <link href="http://cdn.bootcss.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- 新 Bootstrap 核心 CSS 文件 -->
+<!--
 	<link href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-
+-->
 	<!-- 可选的Bootstrap主题文件（一般不使用） -->
+	<!--
 	<script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap-theme.min.css"></script>
-
+-->
 	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 	<script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
 
 	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 	<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="../static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../static/bootstrap/css/bootstrap-theme.min.css">
 
 	<!--echart本地js文件-->
 	<script type="text/javascript" src="/static/echarts.min.js"></script>
@@ -101,6 +105,17 @@
 		.toright{ vertical-align: }
 
 		td,th{ text-align:center; }
+
+		#regpic{
+			width: 32px;
+			height: 32px;
+			font-size: 30px; 
+		}
+
+		.middle{
+			margin-right: auto;
+			margin-left: auto;
+		}
 	</style>
 	{% block customerstyle %}{% endblock %}
 </head>
