--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -102,7 +102,7 @@
 		}
 
 		.center{ text-align: center; }
-		.toright{ vertical-align: }
+		.toright{ text-align: right;}
 
 		td,th{ text-align:center; }
 
@@ -116,6 +116,8 @@
 			margin-right: auto;
 			margin-left: auto;
 		}
+
+
 	</style>
 	{% block customerstyle %}{% endblock %}
 </head>
