--- a/index/templates/login.html
+++ b/index/templates/login.html
@@ -16,7 +16,7 @@
 					<dd style="width:270px;border-left: 2px solid #CED6DF;padding-left: 5px;line-height: 18px;margin-left: 40px;"><span>密码登录</span>
 						<br>
 						未注册用户，请先
-						<a href="../login/">注册</a>。
+						<a href="../register/">注册</a>。
 					</dd>
 				</dl>
 			</div>
