--- a/index/templates/nav.html
+++ b/index/templates/nav.html
@@ -48,6 +48,17 @@
 							</abbr>
 						</a>
 					</li>
+					<li class="toright">
+						<a href="../register/">
+							注册
+						</a>
+					</li>
+					
 				</ul>
+				<li class="toright">
+					<a href="../login/">
+						登录
+					</a>
+				</li>
 			</div>
 		</nav>
